--- a/networking.yml
+++ b/networking.yml
@@ -4,24 +4,22 @@
     src: templates/interfaces.j2
     dest: /etc/network/interfaces
 
-- name: Install dhcp server
-  apt: pkg=isc-dhcp-server state=installed update_cache=yes
-
-- name: Copy isc configuration
+- name: Copy nat configuration
   template:
-    src: templates/isc.j2
-    dest: "/etc/default/isc-dhcp-server"
+    src: templates/nat.j2
+    dest: "/etc/nat"
+    mode: 0755
 
-- name: Backup dhcpd.conf
-  shell: mv /etc/dhcp/dhcpd.conf /etc/dhcp/dhcpd.conf.bak
+- name: Install dnsmasq
+  apt: pkg=dnsmasq state=installed
 
 - name: Copy dhcp configuration
   template:
-    src: templates/dhcpd.conf.j2
-    dest: "/etc/dhcp/dhcpd.conf"
+    src: templates/dnsmasq.j2
+    dest: "/etc/dnsmasq.conf"
 
-- name: Restart dhcp server
-  service: name=isc-dhcp-server state=restarted
+- name: Restart dnsmasq
+  service: name=dnsmasq state=restarted
 
 - name: Backup sysctl.conf
   shell: cp /etc/sysctl.conf /etc/sysctl.conf.bak
@@ -30,13 +28,3 @@
   template:
     src: templates/sysctl.conf.j2
     dest: /etc/sysctl.conf
-
-- name: Iptables Rules
-  shell: "iptables -t nat -A POSTROUTING -o {{ external_interface }} -j MASQUERADE"
-
-- shell: "iptables -A FORWARD -i {{ external_interface }} net -o {{ internal_interface }} -m state -–state RELATED,ESTABLISHED -j ACCEPT"
-
-- shell: "iptables -A FORWARD -i {{ internal_interface }} -o {{ external_interface }} -j ACCEPT"
-
-- name: Save Iptables Rules
-  shell: iptables-save > /etc/iptables.rules
