--- a/transmission.yml
+++ b/transmission.yml
@@ -17,7 +17,7 @@
 - name: Copy post download script
   template:
     src: templates/posttorrent.j2
-    dest: /home/root/posttorrent.sh
+    dest: /root/posttorrent.sh
     mode: 0755
 
 - name: Backup configuration file
@@ -27,3 +27,8 @@
   template:
     src: templates/transmission.j2
     dest: /var/lib/transmission-daemon/info/settings.json
+
+- name: Start transmission daemon
+  service:
+    name: transmission-daemon
+    state: restarted
