--- a/main.yml
+++ b/main.yml
@@ -11,6 +11,7 @@
     apt: pkg={{ item }} state=installed
     with_items:
       - mc
+      - unrar
     tags: packages
 
   - include: networking.yml
