--- a/files/watchlist.yml
+++ b/files/watchlist.yml
@@ -1,8 +1,10 @@
 ---
 series:
+  - Ash vs Evil Dead
+  - Better Call Saul
   - Black Sails
-  - Blindspot
   - Cosmos A Space Time Odyssey
+  - Designated Survivor
   - Elementary
   - Family Guy
   - Fargo
@@ -12,23 +14,19 @@ series:
   - Homeland
   - Lilyhammer
   - Limitless
-  - Lookinglass
-  - Lucifer
   - Mr Robot
-  - Minority Report
   - Misfits
   - Person of Interest
   - Rick and Morty
-  - Rosewood
+  - Second Chance
   - Sherlock
   - South Park
   - The Big Bang Theory
-  - The Grinder
-  - The Following
   - The Simpsons
   - The Muppets
   - The Walking Dead
+  - The X-Files
   - True Detective
   - Vikings
   - Under the Dome
-  - Z Nation
+  - Westworld
